--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>HeoresApp</title>
+  <title>EmperorApp</title>
   <base href="/">
 
   {{#unless environment.production}}
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-main>Loading...</app-main>
   
     {{#each scripts.polyfills}}
     <script src="{{.}}"></script>
