--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-main>Loading...</app-main>
+  <app-root>Loading...</app-root>
   
     {{#each scripts.polyfills}}
     <script src="{{.}}"></script>
